--- a/conspects/introduction/Задачи.md
+++ b/conspects/introduction/Задачи.md
@@ -13,3 +13,10 @@ for (int i = 0; i < n; i++) {
     }
 }
 ```
+
+### Далее следуют задачи из контеста на codeforces.
+
+*TODO* :
+* ссылку на группу + контест
+* инструкция по сдаче заданий
+* продумать как сдавать задачи
