Начало конспекта по линейным алгоритмам

--- a/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
+++ b/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
@@ -49,6 +49,23 @@ cout << sum;
 ### Массив частичных сумм: N-мерный случай**
 ### Подотрезок с максимальной суммой**
 
+> Подотрезком будем называть множество, состоящее из нескольких подряд идущих элементов массива.
+> Более формально, если у нас есть массив [$a_1, a_2, \dots, a_n$], то его подотрезком будет любой массив вида [$a_k, a_{k+1}, \dots, a_l$], где $1 \le k \le l \le n$.
+> 
+> Например, для массива [$4, 3, 2, 5$] подотрезками будут являться [$3, 2$], [$4$], [$3, 2, 5$].
+
+Задача формулируется следующим образом: для данного массива нужно найти подотрезок, сумма элементов которого максимальна.
+
+* Понятно, что если в нашем массиве все элементы неотрицательны, то в качестве такого подотрезка можно взять весь массив.
+
+  Мы можем так поступить, поскольку при добавлении в сумму еще одного элемента она либо убеличится, либо не изменится.
+
+  Например, для массива [$1, 2, 3, 4$] максимальная достижимая сумма на подотрезке --- $10$, и это же --- сумма вех элементов.
+* Но что делать, если в массиве содержатся отрицательные элементы? Для массива [$5, 2, -20, 4, 1$] сумма всех его элементов будет равна $-8$, а сумма на подотрезке [$5, 2$] --- $7$, что явно больше.
+
+Для начала приедем упрощенное решение этой задачи. Будем искать только максимальную сумму, без границ подотрезка, на котором она достигается.
+
+
 
 ### Бонус
 
