--- a/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
+++ b/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
@@ -4,12 +4,10 @@
 * Под линейными алгоритмами будем подразумевать алгоритмы такие, для написания которых нам достаточно только одного цикла. 
 * Линейные алгоритмы, как правило, эффективны. Часто на их выполнение тратится столько же времени, сколько на считывание входных данных.
 * Асимптотически сложность таких алгоритмов всегда оценивается как $O(n)$
-  <details>
-    <summary><b>Что это значит?</b></summary>
-    Простыми словами, время выполнения такого алгоритма будет прямо пропорционально размеру данных, с которыми необходимо работать.
 
-    Подробней про асимптотику и O-нотации можно узнать в [этом]() уроке.
-  </details>
+> Простыми словами, время выполнения такого алгоритма будет прямо пропорционально размеру данных, с которыми необходимо работать.
+>
+> Подробней про асимптотику и O-нотации можно узнать в [этом]() уроке.
 
 ### Сумма элементов массива
 
@@ -18,6 +16,7 @@
 Вам должен быть уже хорошо знаком принцип работы такого алгоритма: мы заводим переменную sum, значение которой изначально равно 0, а затем поочередно добавляем к ней каждый элемент массива (или списка в языке python).
 
 Реализация для Python
+
 ```python
 a = [3, 4, 5, 8]
 sum = 0
@@ -42,11 +41,212 @@ cout << sum;
 > * Помните про переполнения. Число типа данных int вмещает в себя значение до $2^31-1$. Если сумма элементов в какой-то момент станет больше, то случится переполнение и результат окажется некорректным
 
 ### Максимум и минимум в массиве
+
+Теперь решим следующую задачу. Дан массив и необходимо найти в нем минимальный (максимальный) элемент.  Будем рассматривать алгоритм для поиска **максимума**. 
+
+Просто переберем все элементы в массиве и будем сравнивать их с последним найденным максимумом. Его будем хранить в переменной $Max$. При этом важно <b>правильно</b> подобрать стартовое значение $Max$: для этого есть два способа:
+
+
+* Пусть $Max = a[0]$. Тогда если $a[0]$ и есть максимальный элемент в массиве, то он не пересчитается, в противном случае он будет заменен на больший $a[i]$
+
+
+* Пусть $Max$ равен такому числу, что в массиве не найдется $a[i] < Max$. Тогда при первом сравнении Max изменится на $a[0]$. Например, если известно, что все $a[i]$ положительны, то можно выбрать $Max = 0$.
+
+Код на языке Python
+
+```py
+Max = 0
+a = [int(i) for i in input().split()]
+for i in a:
+    Max = max(Max, i)
+print(Max)
+
+```
+Рассмотрим работу данного алгоритма для входных данных *1 2 5 4*
+* Перед началом работы алгоритма Max = 0
+* На 1 шаге Max = max(0, 1) = 1
+* На 2 шаге Max = max(1, 2) = 2 
+* На 3 шаге Max = max(2, 5) = 5
+* На 4 шаге Max = max(5, 4) = 5
+
+В результате работы алгоритма получим Max = 5
+
+Что делать, если нужно найти *минимум*, а не максимум? Будем сравнивать с переменной $Min$. По аналогии, нужно правильно выбрать стартовое значение --- оно должно быть равно очень большому числу или также $a[0]$. Подумайте, почему так.
+
 ### Индекс максимума
+
+Теперь нам нужно найти не только максимальный элемент, но и его индекс. (Чаще всего, если максимальных элементов несколько, просят вывести индекс первого из них).
+Тогда мы уже не сможем производить сравнения при помощи встроенной функции $max$, поэтому напишем ее самостоятельно.
+В переменной $index$ будем хранить искомую позицию и в случае необходимости обновлять ее.
+
+```py
+a = [int(i) for i in input().split()]
+Max = a[0]
+index = 0
+for i in range(1, len(a)):
+    if a[i] > Max:
+        Max = a[i]
+        index = i
+print(Max, index)
+```
+
 ### Второй максимум (и его индекс)
+
+Пусть $a[i]$ &mdash; максимальный элемент массива, тогда если мы удалим его, какой-то другой элемент $a[j]$ станет новым максимумом. Тогда $a[j]$ является вторым максимумом. Задача заключается в том, чтобы найти первый и второй максимум в массиве.
+
+Будем решать ее аналогично предыдущим. Заведем две переменные $Max1$ и $Max2$, в которых будем пересчитывать значения максимумов. Тогда для любого $a[i]$ произведем следующие сравнения:
+
+* Если $a[i] > Max1$, то $Max2 = Max1$ и $Max1 = a[i]$. Первое присваивание мы должны сделать потому что обнаружили, что старое значение $Max1$ уже не является максимальным во всем массиве, однако оно было больше $Max2$, а значит может оказаться вторым максимумом.
+* Иначе если $a[i] > Max2$, то $Max2 = a[i]$
+
+Для $Max1$ и $Max2$ также можно выбрать $a[0]$ в качестве стартового значения.
+
+```py
+a = [int(i) for i in input().split()]
+Max1 = a[0]
+Max2 = a[0]
+for i in range(1, len(a)):
+    if a[i] > Max1:
+        Max2 = Max1
+        Max1 = a[i]
+    elif a[i] > Max2:
+        Max2 = a[i]
+print(Max1, Max2)
+
+```
+
+
 ### Частичные суммы: что это?
+
+Постановка задачи: дан массив из $n$ элементов. Необходимо научиться находить сумму всех элементов на отрезке $[l, r]$.
+Будем решать [оффлайн-версию задачи](https://acmp.ru/asp/do/index.asp?main=task&id_course=2&id_section=20&id_topic=44&id_problem=290).
+
+> Что такое offline и online задачи?
+> 
+> **Offline** задача подразумевает, что все запросы известны заранее и не происходит модификаций элементов массива между запросами.
+> **Online** задача, соответственно, разрешает наличие модификаций.
+> Пример <a href="https://acmp.ru/asp/do/index.asp?main=task&id_course=2&id_section=20&id_topic=47&id_problem=606">online</a> версии этой же задачи.
+
 ### Массив частичных сумм
+
+**Простое решение**
+
+Для каждой пары индексов $l,r$ пройдемся по массиву и посчитаем сумму.
+
+Решение 1
+
+```py
+n = int(input())
+a = [int(i) for i in input().split()]
+sum = 0
+m = int(input())
+for i in range(m):
+    l, r = map(int, input().split())
+    for i in range(l, r + 1):
+        sum += a[i]
+    print(sum)
+```
+
+Асимптотика для худшего случая: $O(n^2)$.
+
+
+**Оптимальное решение**
+
+Давайте посчитаем все суммы заранее. Для этого нам понадобится создать массив частичных сумм $sums$.(partSums).
+
+* Пусть $sums[i]$ хранит сумму на префиксе длины i. Тогда: $sums[0] = a[0]$, $sums[i] = sums[i - 1] + a[i]$
+  Пример для $a = [1, 2, 3, 4]$, $sums = [1, 3, 6, 10]$.
+
+* Теперь мы хотим найти сумму на отрезке $[l, r]$. Просто понять, что так как $sums[i] = sum(a[0] + ... + a[i])$, то $sums[r] =  sum(a[0] + ... + a[r])$. Как исключить лишние элементы из этой суммы?
+
+
+Вычтем из нее $sums[l - 1]$. Это работает, потому что справедливо следующее:
+$sum(a[0] + ... + a[r]) = sum(a[0] + ... + a[l - 1]) + sum(a[l] + ... + a[r])$
+
+$sum(a[l] + ... + a[r]) = sum(a[0] + ... + a[r]) - sum(a[0] + ... + a[l - 1]) = sums[r] - sums[l - 1]$
+
+
+Теперь мы тратим всего $O(n)$  на построение массива частичных сумм и $O(1)$ на запрос.
+
+
+> Что такое префикс и суффикс?
+>
+> Для массива $a$, содержащего $n$ элементов, префиксом длины $k$ называется его подотрезок вида $[a[0], a[1],..., a[k - 1]]$,где $0 <= k <= n$.
+>
+>Для массива $a$, содержащего $n$ элементов, суффиксом длины $k$ называется его подотрезок вида $[a[n - k + 1], a[n - k + 2],..., a[n]]$,где $0 <= k <= n$.
+
+* Например, для массива $a = [1, 2, 3, 4, 7]$ префикс длины $2$ &mdash; это $[1, 2]$, а суффикс длины $3$ &mdash; это $[3, 4, 7]$.
+
+
+
+#### Для каких операций он определен?<a name = "partsum1"></a>
+
+Для некоторых операций существуют обратные, а для некоторых нет.
+Например, если $C = A + B$, то мы можем вернуться к $A$, применив обратную операцию &mdash; вычитание: $A = C - B$.
+Также обратными операциями являются <b>деление и умножение</b>. Операция $XOR$ (исключающее или) обратна сама себе.
+А вот операции $min(A, B)$ и $max(A, B)$ не имеют обратных, поэтому искать максимумы получится только на префиксах или суффиксах, но не на подотрезках.
+
+> Что такое xor?
+> 
+> $XOR$ (исключающее ИЛИ) &mdash; логическая функция от двух переменных $a$ и $b$, эквивалентная сложению по модулю $2$. Если $a = b$, то $a$ xor $b$ = $0$, иначе $a$ xor $b$ = $1$.
+> Приведем таблицу истинности:
+<table>
+<tr>
+<th>A</th>
+<th>B</th>
+<th>A^B</th>
+</tr>
+<tr><td>0</td><td>0</td><td>0</td></tr>
+<tr><td>0</td><td>1</td><td>1</td></tr>
+<tr><td>1</td><td>0</td><td>1</td></tr>
+<tr><td>1</td><td>1</td><td>0</td></tr>
+</table>
+
+
+#### Тонкости реализации<a name = "partsum2"></a>
+
+Есть пара классических моментов, которые стоит учесть
+
+*  При $l = 0$ мы не сможем обратиться к элементу $a[l - 1]$, так как выйдем за пределы массива. Тогда можно ввести индексацию с $1$ массивах $a$ и $sums$. При этом нужно не забыть присвоить $sums[0] = 0$, так как 0  &mdash; нейтральный элемент для суммы и разности. (Стоит помнить, что для разных операций нейтральные элементы могут отличаться!)
+
+*  Также можно заметить, что мы используем массив $a$ только для построения $sums$, и при этом не обращаемся ни к какому $a[i]$ больше одного раза. Тогда можно вовсе не хранить исходный массив, а просто считывать числа из входных данных
+
+*  Если это не прописано в задаче явно, стоит сделать проверку на то, что $l <= r$
+
+Решение 2
+
+```py
+n = int(input())
+sums = [0 for i in range(n + 1)] #заполним массив n + 1 нулем
+index = 1
+
+for i in input().split():
+    sums[index] = sums[index - 1] + int(i)
+index += 1
+
+m = int(input())
+for i in range(m):
+    l, r = map(int, input().split())
+print(sums[r] - sums[l - 1])
+```
+
 ### Массив частичных сумм: N-мерный случай**
+
+Что произойдет, если мы увеличим размерность задачи до 2? Пусть теперь нам дана матрица размера $N*M$, и мы хотим узнать сумму элементов в подматрице, заданной индексами $x1, y1, x2, y2$, где $a[x1][y1]$ &mdash; это левый верхний элемент подматрицы, а $a[x2][y2]$ &mdash; правый нижний.
+
+Снова нужно использовать массив частичных сумм! Построим его следующим образом.
+
+* $sums[i][j]$ содержит в себе сумму элементов подматрицы (1, 1, i, j).
+
+* $sums[0][0] = a[0][0]$
+
+* $sums[i][j] = sums[i - 1][j] + sums[i][j - 1] - sums[i - 1][j - 1]$.
+
+Теперь научимся находить ответ на задачу.
+$sum(x1, y1, x2, y2) = sums[x2][y2] - sums[x1 - 1][y2] - sums[x2][y1 - 1] + sums[x1 - 1][y1 - 1]$
+
+Для N > 2 задачу можно обобщить. Пример такой задачи &mdash; [RSQ 3D](https://acmp.ru/asp/do/index.asp?main=task&id_course=2&id_section=20&id_topic=44&id_problem=291) (школьный этап 9-11 классы 2019 года).
+
 ### Подотрезок с максимальной суммой**
 
 > Подотрезком будем называть множество, состоящее из нескольких подряд идущих элементов массива.
