--- a/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
+++ b/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
@@ -38,7 +38,7 @@ cout << sum;
 
 > **Важно**: 
 > * Не забывайте присваивать значение "0" переменной sum в начале работы программы. Если забыть это сделать в с++, то переменная останется неинициализированной, и сумма будет принимать странные значения
-> * Помните про переполнения. Число типа данных int вмещает в себя значение до $2^31-1$. Если сумма элементов в какой-то момент станет больше, то случится переполнение и результат окажется некорректным
+> * Помните про переполнения. Число типа данных int вмещает в себя значение до $2^{31}-1$. Если сумма элементов в какой-то момент станет больше, то случится переполнение и результат окажется некорректным
 
 ### Максимум и минимум в массиве
 
