test.py is_solved checker added

--- a/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
+++ b/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
@@ -1,11 +1,11 @@
 ## Линейные алгоритмы
 ### Что такое линейный алгоритм?
 
-* Под линейными алгоритмами будем подразумевать алгоритмы такие, для написания которых нам достаточно только одного цикла. 
+* Под линейными алгоритмами будем подразумевать такие алгоритмы, для написания которых нам достаточно только одного вложенного цикла. 
 * Линейные алгоритмы, как правило, эффективны. Часто на их выполнение тратится столько же времени, сколько на считывание входных данных.
 * Асимптотически сложность таких алгоритмов всегда оценивается как $O(n)$
 
-> Простыми словами, время выполнения такого алгоритма будет прямо пропорционально размеру данных, с которыми необходимо работать.
+> Время выполнения такого алгоритма будет прямо пропорционально размеру данных, с которыми необходимо работать.
 >
 > Подробней про асимптотику и O-нотации можно узнать в [этом]() уроке.
 
@@ -13,7 +13,7 @@
 
 Для лучшего понимания давайте посмотрим на код, при помощи которого можно найти сумму элементов массива.
 
-Вам должен быть уже хорошо знаком принцип работы такого алгоритма: мы заводим переменную sum, значение которой изначально равно 0, а затем поочередно добавляем к ней каждый элемент массива (или списка в языке python).
+Вам должен быть уже хорошо знаком принцип работы такого алгоритма: мы заводим переменную $sum$, значение которой изначально равно $0$, а затем поочередно добавляем к ней каждый элемент массива (или списка в языке python).
 
 Реализация для Python
 
@@ -25,7 +25,7 @@ for i in range(len(a)):
 print(sum)    
 ```
 Реализация для c++
-```cpp
+```c
 int a[4] = {3, 4, 5, 8};
 int sum = 0;
 for(int i = 0; i < 4; i++){
@@ -37,41 +37,41 @@ cout << sum;
 Но даже у такого простого алгоритма могут возникать свои нюансы.
 
 > **Важно**: 
-> * Не забывайте присваивать значение "0" переменной sum в начале работы программы. Если забыть это сделать в с++, то переменная останется неинициализированной, и сумма будет принимать странные значения
-> * Помните про переполнения. Число типа данных int вмещает в себя значение до $2^{31}-1$. Если сумма элементов в какой-то момент станет больше, то случится переполнение и результат окажется некорректным
+> * Не забывайте присваивать значение "0" переменной sum в начале работы программы. Если забыть это сделать в с++, то переменная останется неинициализированной, и в переменную $sum$ изначально запишется непонятное значение (мусор).
+> * Помните про переполнения. Число типа данных int вмещает в себя значение до $2^{31}-1$ (примерно $2 \cdot 10^9$). Если сумма элементов в какой-то момент станет больше, то случится переполнение и результат окажется некорректным. Можете например прибавить $100$ раз к значению $sum$ $10^9$ и посмотреть на результат.
 
 ### Максимум и минимум в массиве
 
 Теперь решим следующую задачу. Дан массив и необходимо найти в нем минимальный (максимальный) элемент.  Будем рассматривать алгоритм для поиска **максимума**. 
 
-Просто переберем все элементы в массиве и будем сравнивать их с последним найденным максимумом. Его будем хранить в переменной $Max$. При этом важно <b>правильно</b> подобрать стартовое значение $Max$: для этого есть два способа:
+Просто переберем все элементы в массиве и будем сравнивать их с последним найденным максимумом. Его будем хранить в переменной $mx$. При этом важно <b>правильно</b> подобрать стартовое значение $mx$: для этого есть два способа:
 
 
-* Пусть $Max = a[0]$. Тогда если $a[0]$ и есть максимальный элемент в массиве, то он не пересчитается, в противном случае он будет заменен на больший $a[i]$
+* Пусть $mx = a[0]$. Тогда если $a[0]$ и есть максимальный элемент в массиве, то он не пересчитается, в противном случае он будет заменен на больший $a[i]$
 
 
-* Пусть $Max$ равен такому числу, что в массиве не найдется $a[i] < Max$. Тогда при первом сравнении Max изменится на $a[0]$. Например, если известно, что все $a[i]$ положительны, то можно выбрать $Max = 0$.
+* Пусть $mx$ равен такому числу, что в массиве не найдется $a[i] < mx$. Тогда при первом сравнении mx изменится на $a[0]$. Например, если известно, что все $a[i]$ положительны, то можно выбрать $mx = 0$.
 
 Код на языке Python
 
 ```py
-Max = 0
+mx = 0
 a = [int(i) for i in input().split()]
 for i in a:
-    Max = max(Max, i)
-print(Max)
+    mx = max(mx, i)
+print(mx)
 
 ```
 Рассмотрим работу данного алгоритма для входных данных *1 2 5 4*
-* Перед началом работы алгоритма Max = 0
-* На 1 шаге Max = max(0, 1) = 1
-* На 2 шаге Max = max(1, 2) = 2 
-* На 3 шаге Max = max(2, 5) = 5
-* На 4 шаге Max = max(5, 4) = 5
+* Перед началом работы алгоритма mx = 0
+* На 1 шаге mx = max(0, 1) = 1
+* На 2 шаге mx = max(1, 2) = 2 
+* На 3 шаге mx = max(2, 5) = 5
+* На 4 шаге mx = max(5, 4) = 5
 
-В результате работы алгоритма получим Max = 5
+В результате работы алгоритма получим mx = 5
 
-Что делать, если нужно найти *минимум*, а не максимум? Будем сравнивать с переменной $Min$. По аналогии, нужно правильно выбрать стартовое значение --- оно должно быть равно очень большому числу или также $a[0]$. Подумайте, почему так.
+Что делать, если нужно найти *минимум*, а не максимум? Будем сравнивать с переменной $mn$. По аналогии, нужно правильно выбрать стартовое значение &mdash; оно должно быть равно очень большому числу или также $a[0]$. Подумайте, почему так.
 
 ### Индекс максимума
 
@@ -81,37 +81,37 @@ print(Max)
 
 ```py
 a = [int(i) for i in input().split()]
-Max = a[0]
+mx = a[0]
 index = 0
 for i in range(1, len(a)):
-    if a[i] > Max:
-        Max = a[i]
+    if a[i] > mx:
+        mx = a[i]
         index = i
-print(Max, index)
+print(mx, index)
 ```
 
-### Второй максимум (и его индекс)
+### Второй максимум
 
 Пусть $a[i]$ &mdash; максимальный элемент массива, тогда если мы удалим его, какой-то другой элемент $a[j]$ станет новым максимумом. Тогда $a[j]$ является вторым максимумом. Задача заключается в том, чтобы найти первый и второй максимум в массиве.
 
-Будем решать ее аналогично предыдущим. Заведем две переменные $Max1$ и $Max2$, в которых будем пересчитывать значения максимумов. Тогда для любого $a[i]$ произведем следующие сравнения:
+Будем решать ее аналогично предыдущим. Заведем две переменные $mx1$ и $mx2$, в которых будем пересчитывать значения максимумов. Тогда для любого $a[i]$ произведем следующие сравнения:
 
-* Если $a[i] > Max1$, то $Max2 = Max1$ и $Max1 = a[i]$. Первое присваивание мы должны сделать потому что обнаружили, что старое значение $Max1$ уже не является максимальным во всем массиве, однако оно было больше $Max2$, а значит может оказаться вторым максимумом.
-* Иначе если $a[i] > Max2$, то $Max2 = a[i]$
+* Если $a[i] > mx1$, то $mx2 = mx1$ и $mx1 = a[i]$. Первое присваивание мы должны сделать потому что обнаружили, что старое значение $mx1$ уже не является максимальным во всем массиве, однако оно было больше $mx2$, а значит может оказаться вторым максимумом.
+* Иначе если $a[i] > mx2$, то $mx2 = a[i]$
 
-Для $Max1$ и $Max2$ также можно выбрать $a[0]$ в качестве стартового значения.
+Для $mx1$ и $mx2$ также можно выбрать $a[0]$ в качестве стартового значения.
 
 ```py
 a = [int(i) for i in input().split()]
-Max1 = a[0]
-Max2 = a[0]
+mx1 = a[0]
+mx2 = a[0]
 for i in range(1, len(a)):
-    if a[i] > Max1:
-        Max2 = Max1
-        Max1 = a[i]
-    elif a[i] > Max2:
-        Max2 = a[i]
-print(Max1, Max2)
+    if a[i] > mx1:
+        mx2 = mx1
+        mx1 = a[i]
+    elif a[i] > mx2:
+        mx2 = a[i]
+print(mx1, mx2)
 
 ```
 
@@ -138,13 +138,29 @@ print(Max1, Max2)
 ```py
 n = int(input())
 a = [int(i) for i in input().split()]
-sum = 0
 m = int(input())
 for i in range(m):
     l, r = map(int, input().split())
+    sum = 0
     for i in range(l, r + 1):
         sum += a[i]
     print(sum)
+```
+```c
+int n; cin >> n;
+vector<int> a(n);
+for (int i = 0; i < n; i++) {
+    cin >> a[i];
+}
+int m; cin >> m;
+for (int iq = 0; iq < m; iq++) {
+    int l,r; cin >> l >> r;
+    int sum = 0;
+    for (int i = l; i <= r; i++) {
+        sum += a[i];
+    }
+    cout << sum << endl;
+}
 ```
 
 Асимптотика для худшего случая: $O(n^2)$.
@@ -260,8 +276,8 @@ $sum(x1, y1, x2, y2) = sums[x2][y2] - sums[x1 - 1][y2] - sums[x2][y1 - 1] + sums
 
   Мы можем так поступить, поскольку при добавлении в сумму еще одного элемента она либо убеличится, либо не изменится.
 
-  Например, для массива [$1, 2, 3, 4$] максимальная достижимая сумма на подотрезке --- $10$, и это же --- сумма вех элементов.
-* Но что делать, если в массиве содержатся отрицательные элементы? Для массива [$5, 2, -20, 4, 1$] сумма всех его элементов будет равна $-8$, а сумма на подотрезке [$5, 2$] --- $7$, что явно больше.
+  Например, для массива [$1, 2, 3, 4$] максимальная достижимая сумма на подотрезке &mdash; $10$, и это же &mdash; сумма вех элементов.
+* Но что делать, если в массиве содержатся отрицательные элементы? Для массива [$5, 2, -20, 4, 1$] сумма всех его элементов будет равна $-8$, а сумма на подотрезке [$5, 2$] &mdash; $7$, что явно больше.
 
 Для начала приедем упрощенное решение этой задачи. Будем искать только максимальную сумму, без границ подотрезка, на котором она достигается.
 
