--- a/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
+++ b/conspects/Введение/Основные понятия/Линейные алгоритмы/Линейные алгоритмы.md
@@ -37,7 +37,7 @@ cout << sum;
 Но даже у такого простого алгоритма могут возникать свои нюансы.
 
 > **Важно**: 
-> * Не забывайте присваивать значение "0" переменной sum в начале работы программы. Если забыть это сделать в с++, то переменная останется неинициализированной, и сумма будет принимать странные значения
+> * Не забывайте присваивать значение "0" переменной $sum$ в начале работы программы. Если забыть это сделать в с++, то переменная останется неинициализированной, и сумма будет принимать странные значения
 > * Помните про переполнения. Число типа данных int вмещает в себя значение до $2^{31}-1$. Если сумма элементов в какой-то момент станет больше, то случится переполнение и результат окажется некорректным
 
 ### Максимум и минимум в массиве
@@ -115,6 +115,29 @@ print(Max1, Max2)
 
 ```
 
+### Циклический сдвиг
+
+Часто вы будете встречаться с задачами, в которых необходимо будет произвести циклический сдвиг массива.
+
+Например, если мы сделаем циклический сдвиг массива на один шаг *1 2 3 4 5* вправо, то получим массив *5 1 2 3 4*, а если влево --- получим *2 3 4 5 1*. Всего у массива есть $n$ циклических сдвигов в одну сторону, где $n$ --- длина массива.
+
+Таким образом, задача будет состоять в том, чтобы заменить каждый элемент на следующий (либо предыдущий)
+
+```cpp
+int a[5] = {1, 2, 3, 4, 5};
+int last = a[4];
+for(int i = n - 1; i > 0; i--){
+    a[i] = a[i - 1];
+}
+a[0] = last;
+```
+Рассмотрим результат работы алгоритма по шагам:
+* до начала цикла a = *1 2 3 4 5*, last = 5
+* i = 4: a = *1 2 3 4 4*
+* i = 3: a = *1 2 3 3 4*
+* i = 2: a = *1 2 2 3 4*
+* i = 1: a = *1 1 2 3 4*
+* присвоим a[0] = last, получим a = *5 1 2 3 4*
 
 ### Частичные суммы: что это?
 
@@ -147,7 +170,7 @@ for i in range(m):
     print(sum)
 ```
 
-Асимптотика для худшего случая: $O(n^2)$.
+Асимптотика для худшего случая: $O(n^2)$. Таким образом, алгоритм является не линейным!
 
 
 **Оптимальное решение**
