Начало конспекта по 2-й арифметике.

--- a/conspects/Введение/Основные понятия/Рекурсия и перебор/Рекурсия и перебор.md
+++ b/conspects/Введение/Основные понятия/Рекурсия и перебор/Рекурсия и перебор.md
@@ -1,15 +1,19 @@
 # Рекурсия и перебор
 
-## Переборы
+## Когда полезен перебор
 
-Некоторые задачи можно решить при помощи перебора всех возможных вариантов. Часто такое решение достаточно медленное, но при этом точно правильное, так как мы проверяем все варианты.
+Некоторые задачи можно решить при помощи перебора всех возможных вариантов ответа. Часто такое решение достаточно медленное (ведь вариантов решения может оказаться очень много!), но при этом точно правильное, так как мы проверяем все возможные случаи. Часто на то, что задачу можно решить перебором, указывают небольшие ограничения на входные данные.
+
+С другой стороны, иногда при помощи перебора можно решить задачу частично. Для лучшего понимания посмотрим на схемы оценки задач.
+
+## Схемы оценки задач на олимпиадах
 
 На олимпиадах вы столкнетесь с тремя самыми распространенными схемами:
 
 1. **Потестовая оценка** &mdash; за каждый пройденный вашей программой тест вы получаете какое-то количество баллов. (Школьный и Муниципальный этап ВСОШ, МОШ и некоторые другие олимпиады)
 2. **Баллы за подгруппы**. Оценка задачи разбивается на несколько частей в зависимости от ограничений на входные данные. (Почти все перечневые олимпиады, Региональный и Заключительный этапы ВСОШ). Такая проверка позволяет получить частичные баллы за решение, если у вас есть верный, но не эффективный алгоритм.
 
-<a href="https://ibb.co/S0VTrxM"><img src="https://i.ibb.co/sQsSHPN/limits.png" alt="limits" border="0"></a>
+    <a href="https://ibb.co/S0VTrxM"><img src="https://i.ibb.co/sQsSHPN/limits.png" alt="limits" border="0"></a>
 
 3. **Баллы за полное решение** &mdash; задача зачтена, только если прошла все тесты. (Codeforces, ACMP, ВКОШП)
 
@@ -36,7 +40,7 @@ print(Sum)
 
 Решение работает за время $O(n)$, то есть на *Python* мы можем позволить себе ограничения на $n$ до $10^6$, на *С++* &mdash; до $10^8$.
 ___
-**2. Дан список $A$, содержащий $n$ целых положительных чисел. Найдите пару элементов $A_i$ и $A_j$ с наибольшим поизведением, такую, что их сумма кратна $3$.**
+**2. Дан список $A$, содержащий $n$ целых положительных чисел. Найдите пару элементов $A_i$ и $A_j$ с наибольшим произведением, такую, что их сумма кратна $3$.**
 
 Если мы не знаем, как эффективно решить эту задачу, то можем просто перебрать все пары чисел и выбрать такую, которая удовлетворяет условиям.
 
@@ -59,7 +63,7 @@ print(MaxA, MaxB)
 ___
 **3. На плоскости дано $n$ точек $A_i$ с координатами $(x_i, y_i)$. В массив $x$ записаны все $x_i$, в массив y &mdash; все $y_i$. Сколько четверок из них образуют прямоугольники?**
 
-Пусть у нас есть функция $rect$*, которая возвращает значение **true**, если $4$ точки образуют треугольник, и **false** в противном случае.
+Пусть у нас есть функция $rect$*, которая возвращает значение **True**, если $4$ точки образуют треугольник, и **False** в противном случае.
 
 Переберем точки $(x1, y1)$, $(x2, y2)$, $(x3, y3)$, $(x4, y4)$ и проверим для каждой из них. Не забудем поделить полученную сумму на $24$ (это $4!$) &mdash; ровно столько раз мы посчитали каждый из прямоугольников, так как мы перебрали все перестановки каждой четверки точек.
 
@@ -76,7 +80,6 @@ print(sum // 24)
 ```
 
 > *Данная функция работает за $O(1)$. В качестве упражнения можете ее написать и получить дополнительные баллы за курс.
-</spoiler>
 
 Ассимптотка данного решения &mdash; $O(n^4)$. На *C++* мы смогли бы решить такую задачу для $n \le 100$.
 
@@ -147,6 +150,33 @@ do{
 
 
 ## Перебор подмасок: идея
+
+Данный алгоритм подходит, например, для следующих типов задач:
+
+* необходимо найти максимальное (минимальное) подмножество, для которого выполняется какое-то условие.
+    > У вас есть рюкзак, который может вместить вещей на $W$ килограмм. Также есть $n$ предметов, каждый из которых имеет вес $w_i$. Выберете множество предметов максимального веса, которое ы сможем положить в рюкзак.
+* необходимо разбить множество на две группы, соответсвующие какому-то критерию. Например:
+    > В классе участся $n$ человек, для каждого из которых известен его средний балл. Разбейте всех учеников на две группы так, чтобы суммарный средний балл в первой группе был как можно ближе к суммарному среднему баллу во второй.
+
+Например, если у нас есть $n$ шариков, и мы хотим покрасить их в черный и белый цвет. Сколькими способами можно это сделать?
+
+Для первого шарика есть два варианта цвета: черный и белый. Для второго шарика также два варианта. Для третьего и последующих --- аналогично. Тогда переменожим все варианты: $2 \cdot 2 \dots 2 \cdot 2 = 2^n$. Именно такое количество различных раскрасок шариков в $2$ цвета у нас получится. 
+
+
+Пример для $n = 3$.  
+
+1. ⚪⚪⚪     
+2. ⚫⚪⚪
+3. ⚪⚫⚪
+4. ⚪⚪⚫
+5. ⚫⚫⚪
+6. ⚪⚫⚫
+7. ⚫⚪⚫
+8. ⚫⚫⚫
+
+Всего получили $2^3 = 8$ различных раскрасок. Заметим, что каждой раскраске можно сопоставить разбиение множества шариков на две группы: белые шарики поместим в первую группу, черные --- во вторую.
+
+
 
 ## Перебор подмасок: реализация**
 
@@ -255,19 +285,6 @@ int main(){
 
 Дальнейший алгоритм будет аналогичен &mdash; спускаемся по "ветке", пока не достигаем такого значения, которое не зависит от предыдущего &mdash; тогда возвращаемся на шаг назад к предыдущему разветвлению.
 
-
-### Когда может понадобиться рекурсия?
-
-
-Предположим, что мы не знаем, сколько вложенных циклов нам понадобится. Или знаем, но их будет очень много.
-Например, перед нами стоит такая задача: 
-
-> **Выведите все строки длины  $10$, состоящие из букв $a, b, c$**.
-
-Конечно, мы можем написать $10$ вложенных циклов, но такое решение займет много времени и места в коде, в нем легко ошибиться. Тем более, смысл каждого цикла одинаков &mdash; выбираем индекс элемента в строке.
-
-Тогда давайте напишем рекурсивную функцию, которая просто $10$ раз вызывает такой вложенный цикл! 
-
 ### Оптимизация рекурсии: мемоизация
 
 Для $n=6$ дерево стало уже очень большим. При этом, многие значения нам приходится считать по несколько раз!
@@ -276,13 +293,72 @@ int main(){
 
 Прием, позволяющий уменьшить количество вызовов, называется мемоизация (без Р). Заведем массив $count$ на $n$ элементов, в котором $count[0] = count[1] = 1$. Если мы уже посчитали $F(n)$, то заполним $count[n] = F(n)$. Каждый раз при входе в функцию будем проверять, заполнено ли уже $count[n]$, и если да, то просто будем возвращать его значение:
 
-~~~~
+```py
 def F(x):
     if count[x]:
         return count[x]
     return F(x - 1) + F(x - 2)
 
 print(F(6))
-~~~~
+```
 
 ### Рекурсивные переборы**
+
+Пусть перед нами стоит такая задача: 
+
+> **Выведите все строки длины  $10$, состоящие из букв $a, b, c$**.
+
+Конечно, мы можем написать $10$ вложенных циклов, но такое решение займет много времени и места в коде, в нем легко ошибиться. Тем более, смысл каждого цикла одинаков &mdash; выбираем индекс элемента в строке.
+
+Тогда давайте напишем рекурсивную функцию, которая просто $10$ раз вызывает такой вложенный цикл! 
+
+
+* Будем передавать в функцию строку, которая у нас есть на текущий момент.
+* Когда рекурсия должна остановиться? Когда длина строки равна $10$. Сразу пропишем условие: 
+
+    ```py
+    if len(s) == 10:
+        a.add(s) #положили в set
+        return #вышли из функции
+    ```
+
+
+* В теле функции напишем цикл $for$, в котором переберем индекс буквы из строки $base$ и будем вызывать $F(s + base[i])$
+
+* Вызовем нашу функцию от пустой строки, потому что первая из букв может быть любой из возможных трех.
+
+Написав $return$, мы говорим, что не будем дальше спускаться по этой ветке &mdash; сразу поднимемся наверх и посмотрим, какой вариант последней буквы для нашей строки выберем следующим.
+
+* Соберем весь код
+
+```py
+base = 'abc'
+a = set()
+
+def F(s):
+    if len(s) == 4:
+        a.add(s)
+        return
+    for i in range(3):
+        F(s + base[i])
+
+F('')
+for i in a:
+    print(i)
+```
+
+По аналогии можете попробовать решить самостоятельно любую из следующих [задач ЕГЭ](https://inf-ege.sdamgia.ru/test?theme=378) :)
+
+### Минусы рекурсии
+
+Это мощный инструмент, который важно понять и не бояться его использовать, но помнить, что чаще всего он не оптимален. Большинство рекурсивных решений можно заменить нерекурсивными. Например &mdash; вычисление НОД ( [здесь](https://e-maxx.ru/algo/euclid_algorithm) можно сравнить рекурсивную версию алгоритма с нерекурсивной).
+
+* При вызове рекурсивной функции стек заполняется данными о ее предыдущих шагах, в следствие чего программа задействует много памяти, и вы можете получить вердикт <span style="color:red">memory limit exceeded</span>.
+
+> **Что такое стек?**
+>
+> Представьте, что вы складываете стопку книг на стол. Книга, положенная самой первой, окажется внизу, а самой последней &mdash; вверху. Теперь вы хотите переложить книги на полку. Первой вы возьмете в руки самую верхнюю книгу &mdash; ту, которую положили в стопку последней.
+По аналогии работает структура данных **стек**. Он позволяет добавлять элементы, а также доставать их в порядке, обратном тому, в котором вы их клали.
+>
+> В памяти компьютера есть область, также называемая стеком, потому что механизм хранения данных в ней выстрое по такому же принципу.
+
