Добавлен конспект по устройтву задачи и вердиктам тестирующей системы

--- a/conspects/Введение/Основные понятия/Линейные алгоритмы/Строки.md
+++ b/conspects/Введение/Основные понятия/Линейные алгоритмы/Строки.md
@@ -4,6 +4,8 @@
 
 Каждому символу соответствует 8-битное целое значение – ASCII-код. Таким образом тип char может использоваться для хранения целых чисел от -128 до 127 или от 0 до 255 (в зависимости от того, какой из типов используется: signed char и unsigned char).
 
+Рассмотрим коды наиболее интересных нам символов:
+
 * '0'..'9' – цифры в формате символов (ASCII-коды: 48-57)
 
 * 'A'..'Z' – заглавные (прописные) латинские буквы (ASCII-коды: 65-90)
@@ -14,7 +16,7 @@
 
 #### Явное приведение к типу данных в с++
 
-Чтобы привести переменную $x$ к типу данных int, мы можем использовать два следующих способа записи, которые дают аналогичный результат:
+Чтобы привести переменную $x$, например, к типу данных int, мы можем использовать два следующих способа записи, которые дают аналогичный результат:
 
 ```cpp
 cout << int(x) << endl; // функциональный стиль
@@ -209,7 +211,7 @@ C = 12
 ...
 ~~~
 
-Модифицировать код для этого случая достаточно легко: изменим тело цикла.
+Модифицировать код для этого случая достаточно легко: изменим тело цикла следующим образом:
 
 ```cpp
     if(n % 16 < 10) s += char('0' + n % 16);
